# httpx-aiohttp

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml  main.yml  publish.yml
benchmarks/: reporter.py
benchmarks/client/: httpx.py
benchmarks/client/httpx/: script.py
compatibility/: index.html
how_it_works/: index.html
how_its_tested/: index.html
httpx_aiohttp/: client.py  errors.py  transport.py
scripts/: httpx_test.py  run_tests.py
search/: search_index.json
src/httpx_aiohttp/: transport.py
tests/: test_basic.py
why/: index.html
